<resources>
    <string name="app_name">Water</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="suppliers">Suppliers</string>
    <string name="customers">Customers</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>


</resources>
