<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_suppliers"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/suppliers" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/customers" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/report" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/help" />

            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
